# traffic2openapi

./: .gitignore  404.html  CHANGELOG.json  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.json  ROADMAP.md  TASKS.md  go.mod  go.sum  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yaml  playwright-adapters.yaml  sast_codeql.yaml
adapters/browser/: index.html
adapters/har/: index.html
adapters/overview/: index.html
adapters/postman/: index.html
api/ir/: index.html
cli/commands/: index.html
cmd/traffic2openapi/: convert.go  convert_har.go  convert_postman.go  diff.go  generate.go  merge.go  root.go  serve.go  site.go  validate.go  validate_spec.go
concepts/architecture/: index.html
concepts/ir-format/: index.html
docs/: sitemap.xml
docs/adapters/: browser.md  overview.md  postman.md
docs/api/: ir.md
docs/cli/: commands.md
docs/concepts/: architecture.md  ir-format.md
docs/getting-started/: quickstart.md
docs/go-packages/: builder.md  inference.md  logging-transport.md  openapi.md  overview.md  postman.md  providers.md
docs/releases/: v0.2.0.md  v0.3.0.md
docsrc/: index.md
examples/: sample-batch.json  sample-stream.ndjson
pkg/adapters/playwright/python/: README.md  pyproject.toml
pkg/adapters/playwright/python/examples/: async_example.py  basic.py
pkg/adapters/playwright/python/src/traffic2openapi_playwright/: capture.py  types.py  writer.py
pkg/adapters/playwright/python/tests/: test_capture.py  test_types.py  test_writer.py
pkg/har/: reader.go  (+3 more)
schemas/: ir.v1.schema.json
search/: search_index.json
(+123 files in other folders)
